--- a/shipping.html
+++ b/shipping.html
@@ -10,22 +10,19 @@
                 <script type="text/javascript">
                     $(document).ready(function() {
                         var check_module = function() {
-                            console.log('Hiding all shipping');
+                            // Gemmer alle
                             $(".shipping_module").hide();
-
                             // Finder den der er checked
                             var e = $("input[type=radio].shipping:checked");
-
                             if (e) {
                                 var module_name = e.attr('module');
-
                                 // Hvis den der er checked også har en module-attribut, så viser vi den
                                 if (module_name) {
-                                    var module = $(".shipping_module").show();
+                                    console.log('Show ' + module_name);
+                                    var module = $("." + module_name).show();
                                 }
                             }
                         }
-
                         // Loader
                         $("input.shipping").ready(check_module).change(check_module);
                     });
@@ -45,18 +42,18 @@
                 <{/if}>
 
                 <form action="" method="post" id="shippingformular">
-                    <div class="form-row form-row-checkbox">
+                    <div class="form-row checkbox">
                         <{assign var="shippings" value=$webshop->getShippings()}>
                         <{section name="i" loop=$shippings}>
-                        <div class="line shipping_module">
+                        <div class="line shipping_module <{$shippings[i]->getModule()|escape}>">
                             <input class="shipping" type="radio" module="<{$shippings[i]->getModule()|escape}>" value="<{$shippings[i]->getShippingId()}>" name="shipping_id" id="shipping<{$shippings[i]->getShippingId()}>" <{if $session_del.shipping_id == $shippings[i]->getShippingId()}>checked="checked"<{/if}>/>
                             <label for="shipping<{$shippings[i]->getShippingId()}>"><{$shippings[i]->getName()|escape}> <{$shippings[i]->getCost()|number_format:2:",":"."}> <{$webshop->getCurrency()}></label><br/>
                         </div>
-                        <{/section}
+                        <{/section}>
                     </div>
 
                     <{if $shops}>
-                        <div class="form-row form-row-select">
+                        <div class="form-row">
                             <label>Hvor vi du hente din pakke? <br>
                                 <select name="shop">
                                     <{section name="i" loop=$shops}>
@@ -73,8 +70,10 @@
                         <p>Ingen pakkeshops fundet</p>
                     <{/if}>
 
-                    <input type="button" name="prev" value="&laquo; Leveringsadresse" class="btn btn-default btn-lg pull-left" onclick="history.go(-1);"/>
-                    <input type="submit" name="next" value="Gå til betaling &raquo;" class="btn btn-primary btn-lg pull-right" />
+                    <div class="form-row buttons">
+                        <input type="button" name="prev" value="&laquo; Leveringsadresse" class="btn btn-default btn-lg pull-left" onclick="history.go(-1);"/>
+                        <input type="submit" name="next" value="Gå til betaling &raquo;" class="btn btn-primary btn-lg pull-right" />
+                    </div>
                 </form>
 
             </div></div></div>
